# scholarmine

./: .gitignore  LICENSE  README.md  pyproject.toml  todo.md
scholarmine/: __init__.py  cli.py  ip_tracker.py  runner.py  scraper.py
tests/: README.md  __init__.py  conftest.py  test_integration.py  test_ip_tracker.py  test_runner_utils.py  test_scraper_parsing.py
tests/fixtures/: paper_citation.html  scholar_profile.html  scholar_profile_empty.html  test_scholar_urls.txt
