[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scholarmine"
version = "0.1.0"
description = "Google Scholar scraper using Tor for IP rotation and anonymization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Sri Ranganathan Palaniappan" }
]
keywords = [
    "google-scholar",
    "scraper",
    "tor",
    "research",
    "academic",
    "citations",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "requests==2.32.3",
    "beautifulsoup4==4.13.3",
    "stem==1.8.2",
    "PySocks==1.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
scholarmine = "scholarmine.cli:main"

[project.urls]
Homepage = "https://github.com/Sripal1/scholarmine"
Documentation = "https://github.com/Sripal1/scholarmine#readme"
Repository = "https://github.com/Sripal1/scholarmine"
Issues = "https://github.com/Sripal1/scholarmine/issues"

[tool.hatch.build.targets.wheel]
packages = ["scholarmine"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.pytest.ini_options]
markers = [
    "integration: tests requiring Tor and network access (run with: pytest -m integration)",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
